# aivai

./: .env  .env.example  .gitattributes  .gitignore  Makefile  README.md  checklist  clip_maker.py  debug_tavily_results.json  dependencies.md  docker-compose.yml  hybrid_config.toml  md_podcast_build.py  plan  plan.md  plan2  plan3  plan4.md  plan4api  plan4checklist.md  pyproject.toml  sampletranscript  scriptfix  whitelist.yaml
app/: config.py  deps.py  dia  langmanus  main.py  models.py  readmelangmanus
app/agents/: commentator.py  researcher.py  style.py  verifier.py
app/io/: append_transcript.py  audio.py  cleaner.py  files.py  make_notes.py  mix_episode.py  scraper.py
app/orchestrator/: episode_runner.py  guards.py  rundown.py  similarity.py
app/pipelines/: README.md  episode_orchestrator.yaml  pipeline.yaml
app/prompts/: commentator.txt  debate_orchestrator.txt  episode_orchestrator.txt  host_intro.txt  host_outro.txt  persona_template.yaml  researcher.txt  speaker_intro.txt  speaker_outro.txt  style.txt  verifier.txt
app/retrieval/: indexer.py  rank.py  store.py
app/tts/: adapter.py  dia_synth.py
avatars/: alex.yaml  nova.yaml
config/: tts_voices.yaml
docs/: api.md  av_pipeline.md  lightning_setup.md  podcast_prompts_checklist.md
output/: demo.srt  demo.vtt
scripts/: debug_api_keys.py  debug_claims_pipeline.py  debug_tavily.py  feedback  generate_transcript.py  produce_episode.py  run_episode.py  seed_index.py  test_apis.py  test_conversation.py  test_langmanus.py  test_langmanus_no_tts.py  test_researcher.py  test_tavily.py
(+13 files in other folders)
